--- a/tests/templates/thumbnailpreset1.html
+++ b/tests/templates/thumbnailpreset1.html
@@ -1,7 +1,7 @@
-{% load imagecache %}{% spaceless %}
-{% imagecache item.image "test_1" as im %}
-    <img style="margin:{{ im|ic_margin:"test_1" }}" width="{{ im.x }}" height="{{ im.y }}">
+{% load cms_thumbnail %}{% spaceless %}
+{% thumbnail item.image "test_1" as im %}
+    <img style="margin:{{ im|margin:"test_1" }}" width="{{ im.x }}" height="{{ im.y }}">
 {% empty %}
     <crap>
-{% endimagecache %}
+{% endthumbnail %}
 {% endspaceless %}
