--- a/tests/templates/thumbnailpreset6.html
+++ b/tests/templates/thumbnailpreset6.html
@@ -1,7 +1,7 @@
-{% load thumbnail imagecache %}{% spaceless %}
+{% load cms_thumbnail %}{% spaceless %}
 {% thumbnail item.image "100x100" as th %}
-    {% imagecache item.image "test_6" as im %}
+    {% thumbnail item.image "test_6" as im %}
     <a href="{{ th.url }}"><img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}"></a>
-    {% endimagecache %}
+    {% endthumbnail %}
 {% endthumbnail %}
 {% endspaceless %}
